// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div>
  <div
    className="responsive-styles__component-fbPFZZ kPljll"
  >
    <h1
      className="responsive-styles__component-fbPFZZ gVyUxj"
      data-testid="topic-name"
      role="heading"
    >
      Animals
    </h1>
  </div>
</div>
`;

exports[`should render correctly when loading 1`] = `<div />`;

exports[`should render correctly with a description 1`] = `
<div>
  <div
    className="responsive-styles__component-fbPFZZ fqtkRE"
  >
    <h1
      className="responsive-styles__component-fbPFZZ gVyUxj"
      data-testid="topic-name"
      role="heading"
    >
      Animals
    </h1>
    <div
      className="responsive-styles__component-fbPFZZ jJEwHW"
    />
    <div
      data-testid="topic-description"
    >
      Animals are multicellular eukaryotic organisms.
    </div>
  </div>
</div>
`;
